# daily_feeder

./: .gitignore  Readme.md  pyproject.toml
daily_feeder/: daily_feeder.properties  main.py  test_run.py
daily_feeder/daily_feeder/: __init__.py  data_saver.py  displayer.py  encoder4.py  lcd.py  menu.py  minute_comparer.py
daily_feeder/daily_feeder/displayer/: menu_display.py
daily_feeder/daily_feeder/encoder/: fake.py  pi.py  rotary.py
daily_feeder/daily_feeder/other/: encoder.py  encoder2.py  encoder3.py  i2c_lcd_driver.py  lcd.py  menu.py
daily_feeder/daily_feeder/printer/: fake.py  lcd.py  pi.py
daily_feeder/daily_feeder/pump/: controller.py  thread_controller.py
daily_feeder/daily_feeder/test/: test_menu.py
